# python-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/streamcore/: __init__.py  audio.py  client.py  types.py  whip.py
src/streamcoreai/: client.py  whip.py
