[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamcoreai-sdk"
version = "0.1.0"
description = "Python SDK for connecting to a Pion Voice Agent server via WebRTC + WHIP"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["webrtc", "whip", "voice-agent", "pion", "real-time", "audio"]
dependencies = [
    "aiortc>=1.9.0",
    "aiohttp>=3.9.0",
    "av>=12.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]
